--- a/book_BE-main/src/main/resources/application.properties
+++ b/book_BE-main/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 # Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=anhthai2000atm@gmail.com
-spring.mail.password=tfyw nqwm rbno ycrq
+spring.mail.username=tienvovan917@gmail.com
+spring.mail.password=ffnz ybcb xcql cytk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
