--- a/book_fe-master/package.json
+++ b/book_fe-master/package.json
@@ -19,7 +19,9 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
+    "react-social-login-buttons": "^4.1.0",
     "react-toastify": "^10.0.6",
+    "reactjs-social-login": "^2.6.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
